[project]
name = "asana-internal"
version = "0.2.0"
description = "Internal tool for managing Asana projects"
requires-python = ">=3.13"
dependencies = [
    "asana>=5.0.10",
    "keyring>=25.5.0",
    "nicegui>=2.8.1",
    'pywebview>=5.3.2 ; platform_system == "Windows"',
]
[tool.ruff.lint]
ignore = ["E402"]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
[dependency-groups]
dev = ["commitizen>=4.1.0", "pre-commit>=4.0.1", "pyinstaller>=6.11.1"]
